edits to navigation, copy text, and faculty page info

--- a/faculty.html
+++ b/faculty.html
@@ -134,12 +134,13 @@
 
       <div class="content">
         <h2 id="toc_0" class="faculty">Get to Know Us</h2>
+        <p>Here is a listing of the faculty mentors in the program. These are the faculty who have experience in their respective Superpowers </p>
         <h3 id="toc_1">Dene Grigar, PhD</h3>
         <img id="img4" src="img/dene.jpg" alt="Portrait of Dene Grigar">
         <p>Director &amp; Professor</p>
-        <p><a href="mailto:dgrigar@wsu.edu">dgrigar@wsu.edu</a></p>
-        <p><a href="http://www.nouspace.net/dene">http://www.nouspace.net/dene</a></p>
-        <p>Dene (pronounced Dee-Knee) Grigar is the head of the DTC program. She is incredibly passionate about preserving digital literature and devices, specifically through her work on the <a href="https://dtc-wsuv.org/wp/ell">Electronic Literature Lab</a>. Towards the end of your time at WSUV, you will meet with Dene about the Senior Seminar capstone course. It may seem daunting when you get there, but Dene is super supportive and excited for you to be a part of something great!</p>
+        <p>Email: <a href="mailto:dgrigar@wsu.edu">dgrigar@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://www.nouspace.net/dene" target="_blank">http://www.nouspace.net/dene</a></p>
+        <p>Dene (pronounced Dee-Nee) Grigar is the head of the DTC program. She is incredibly passionate about preserving digital literature and devices, specifically through her work on the <a href="https://dtc-wsuv.org/wp/ell">Electronic Literature Lab</a>. Towards the end of your time at WSUV, you will meet with Dene about the Senior Seminar capstone course. It may seem daunting when you get there, but Dene is super supportive and excited for you to be a part of something great!</p>
         <h4 id="toc_2">Areas of Expertise:</h4>
         <p>Digital Curation &amp; Preservation, Multimedia Design, Project Management</p>
         <h4 id="toc_3">Classes:</h4>
@@ -151,9 +152,9 @@
         <h3 id="toc_4">John Barber, PhD</h3>
         <img id="img5" src="img/barber.jpg" alt="Portrait of John Barber">
         <p>Professor, Career Track</p>
-        <p><a href="mailto:jfbarber@wsu.edu">jfbarber@wsu.edu</a></p>
-        <p><a href="http://www.nouspace.net/john">http://www.nouspace.net/john</a></p>
-        <p>Dr. John Barber specializes in usability, accessibility, and how we use technology as tools to solve real world problems. Dr Barber is not only a professor within the program, he is a student mentor and an artist. Dr. Barber is working on some on-going research projects regarding sound based mediums. Check out <em>Reimagined Radio</em> at <a href="http://www.reimaginedradio.net/index.html">http://www.reimaginedradio.net/index.html</a>.</p>
+        <p>Email: <a href="mailto:jfbarber@wsu.edu">jfbarber@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://www.nouspace.net/john" target="_blank">http://www.nouspace.net/john</a></p>
+        <p>Dr. John Barber specializes in usability, accessibility, and how we use technology as tools to solve real world problems. Dr Barber is not only a professor within the program, he is a student mentor and an artist. Dr. Barber is working on some on-going research projects regarding sound based mediums. Check out <em>Reimagined Radio</em> at <a href="http://www.reimaginedradio.net/index.html" target="_blank">http://www.reimaginedradio.net/index.html</a>.</p>
         <h4 id="toc_5">Areas of Expertise:</h4>
         <p>Radio Art, Usability Studies, Digital Storytelling</p>
         <h4 id="toc_6">Classes:</h4>
@@ -166,8 +167,8 @@
         <h3 id="toc_7">Will Luers, MFA</h3>
         <img id="img6" src="img/will_luers.png" alt="Portrait of Will Luers">
         <p>Assoc. Prof., Career Track</p>
-        <p><a href="mailto:wluers@wsu.edu">wluers@wsu.edu</a></p>
-        <p><a href="http://will-luers.com/">http://will-luers.com/</a></p>
+        <p>Email: <a href="mailto:wluers@wsu.edu">wluers@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://will-luers.com/" target="_blank">http://will-luers.com/</a></p>
         <p>Will Luers was hand-selected by Dene Grigar for “Narrative Walks,” a class taught using google maps images and was hired on part-time. Over time, Dr. Grigar pushed Will to come into the CMDC/DTC program full-time. Prof. Luers will be your guide through specialized projects that include video production, narratives, website building, and digital publishing. These projects are the key to your portfolio.</p>
         <h4 id="toc_8">Areas of Expertise:</h4>
         <p>Digital Publishing, Web &amp; Mobile Design, Video, Digital Storytelling</p>
@@ -183,8 +184,8 @@
         <h3 id="toc_8">Michael Rabby, PhD</h3>
         <img id="img7" src="img/michael-rabby.jpg" alt="Portrait of Michael Rabby">
         <p>Assoc. Prof., Career Track</p>
-        <p><a href="mailto:michael.rabby@wsu.edu">michael.rabby@wsu.edu</a></p>
-        <p><a href="https://twitter.com/michaelrabby">https://twitter.com/michaelrabby</a></p>
+        <p>Email: <a href="mailto:michael.rabby@wsu.edu">michael.rabby@wsu.edu</a></p>
+        <p>Personal Site: <a href="https://twitter.com/michaelrabby" target="_blank">https://twitter.com/michaelrabby</a></p>
         <p>Professor Rabby is the head of the Social Media Certificate program, and teaches most of the courses involved with it. Being incredibly involved in the social media marketing space in the Portland/Vancouver area, his lectures translate to the workfield very well. If he isn’t talking about the Houston Astros, reality TV, or shopping malls, he’s teaching you about how to be a social media expert.</p>
         <h4 id="toc_9">Areas of Expertise:</h4>
         <p>Social Media, Media Communication, Quantitative Research</p>
@@ -198,8 +199,8 @@
         <h3 id="toc_11">Brenda Grell, MFA</h3>
         <img id="img8" src="img/brenda_grell.jpg" alt="Portrait of Brenda Grell">
         <p>Assoc. Prof., Career Track</p>
-        <p><a href="mailto:brenda.grell@wsu.edu">brenda.grell@wsu.edu</a></p>
-        <p><a href="http://brendajeangrell.com/">http://brendajeangrell.com/</a></p>
+        <p>Email: <a href="mailto:brenda.grell@wsu.edu">brenda.grell@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://brendajeangrell.com/" target="_blank">http://brendajeangrell.com/</a></p>
         <p>Professor Brenda Grell instructs all about multimedia design as well as 2D and 3D animation. She is super helpful and supportive when you get stuck on a project, and is overall a pleasure to work with. If you’re in the DTC program, you’re likely going to have one or two classes with Brenda, and they will be some of the best classes you take!</p>
         <h4 id="toc_12"><code></code>Areas of Expertise:</h4>
         <p>2 &amp; 3D Animation, Video, Multimedia Design</p>
@@ -213,8 +214,8 @@
         <h3 id="toc_14">Chris Dreger, MFA</h3>
         <img id="img9" src="img/chris.png" alt="Portrait of Chris Dreger">
         <p>Visiting Lecturer</p>
-        <p><a href="mailto:christopher.dreger@wsu.edu">christopher.dreger@wsu.edu</a></p>
-        <p><a href="http://www.chrisdreger.com/">http://www.chrisdreger.com/</a></p>
+        <p>Email: <a href="mailto:christopher.dreger@wsu.edu">christopher.dreger@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://www.chrisdreger.com/" target="_blank">http://www.chrisdreger.com/</a></p>
         <p>Professor Chris Dreger is a professional VFX and motion graphic artist turned DTC professor. He has real experience from the industry working for <a href="https://bentimagelab.com/">Bent Image Lab</a> on numerous different projects, especially commercials. Specializing in all things multimedia design and video post-production, his classes are very fun, working mainly in Adobe Premiere Pro, After Effects, Illustrator, and Photoshop.</p>
         <h4 id="toc_15"><code></code>Areas of Expertise:</h4>
         <p>VFX, Media Design, Motion Graphics, Compositing</p>
@@ -225,11 +226,11 @@
         <li>DTC 478 Usability and Interface Design</li>
         <li>DTC 338 Special Topics, Digital Compositing and VFX</li>
         </ul>
-        <h3 id="toc_17">Richard Snyder, MA</h3>
+        <h3 id="toc_17">Richard Snyder, PhD</h3>
         <img id="img10" src="img/richard_snyder.jpeg" alt="Portrait of Richard Snyder">
-        <p>PhD Candidate, Instructor</p>
-        <p><a href="mailto:richard.snyder@wsu.edu">richard.snyder@wsu.edu</a></p>
-        <p><a href="https://www.linkedin.com/in/richard-snyder-12aba298/">https://www.linkedin.com/in/richard-snyder-12aba298/</a></p>
+        <p>Adjunct Professor, Associate Director of the Electronic Literature Lab</p>
+        <p>Email: <a href="mailto:richard.snyder@wsu.edu">richard.snyder@wsu.edu</a></p>
+        <p>Personal Site: <a href="https://www.linkedin.com/in/richard-snyder-12aba298/" target="_blank">https://www.linkedin.com/in/richard-snyder-12aba298/</a></p>
         <p>Richard Snyder is one of the newer faculty members who helps Dene with the Electronic Literature Lab as well as teaching courses like multimedia authoring and information structures. He is very kind and helpful, and is always eager to answer any questions people have about the ELL.</p>
         <h4 id="toc_18"><code></code>Areas of Expertise:</h4>
         <p>Data Visualization, Digital Storytelling</p>
@@ -241,8 +242,8 @@
         <h3 id="toc_20">Ted Fordyce, MA</h3>
         <img id="img11" src="img/ted-fordyce.jpg" alt="Portrait of Ted Fordyce">
         <p>Academic Advisor</p>
-        <p><a href="mailto:tfordyce@wsu.edu">tfordyce@wsu.edu</a></p>
-        <p><a href="http://directory.vancouver.wsu.edu/people/ted-fordyce">http://directory.vancouver.wsu.edu/people/ted-fordyce</a></p>
+        <p>Email: <a href="mailto:tfordyce@wsu.edu">tfordyce@wsu.edu</a></p>
+        <p>Personal Site: <a href="http://directory.vancouver.wsu.edu/people/ted-fordyce" target="_blank">http://directory.vancouver.wsu.edu/people/ted-fordyce</a></p>
         <p>Being the advisor for all DTC students, Ted helps everyone figure out their path in the DTC program. If you have any questions about the specifics of being a DTC student such as certificate programs, credits, or current standing, Ted is the person to contact and will be incredibly helpful along the way. He also teaches courses when he can, which I would highly recommend taking!</p>
         <h4 id="toc_21"><code></code>Areas of Expertise:</h4>
         <p>Hypertext Theory, Media Studies</p>
@@ -253,8 +254,8 @@
         </ul>
         <h3 id="toc_23">Ed McDonald, MFA</h3>
         <p>Adjust Professor</p>
-        <p><a href="mailto:edward.mcdonald@wsu.edu">edward.mcdonald@wsu.edu</a></p>
-        <p><a href="https://linkedin.com/in/edward-mcdonald-93956124">https://linkedin.com/in/edward-mcdonald-93956124</a></p>
+        <p>Email: <a href="mailto:edward.mcdonald@wsu.edu">edward.mcdonald@wsu.edu</a></p>
+        <p>Personal Site: <a href="https://linkedin.com/in/edward-mcdonald-93956124" target="_blank">https://linkedin.com/in/edward-mcdonald-93956124</a></p>
         <p>Professor Ed McDonald is one of two professors who you will likely start the program with by taking DTC 101. He is incredibly passionate about digital technology and the history behind it. Besides him talking about the electronic music scene in Detroit or the wonders of pub culture in the UK, he’s lecturing about the importance of the foundations of digital technology and culture.</p>
         <h4 id="toc_24"><code></code>Areas of Expertise:</h4>
         <p>Multimedia Design, Media Theory</p>
@@ -265,8 +266,8 @@
         <h3 id="toc_26">Greg Philbrook</h3>
         <img id="img13" src="img/greg.jpg" alt="Portrait of Greg Philbrook">
         <p>Instructional Technician</p>
-        <p><a href="mailto:greg.philbrook@wsu.edu">greg.philbrook@wsu.edu</a></p>
-        <p><a href="https://www.facebook.com/greg.philbrook.7?fref=ts">https://www.facebook.com/greg.philbrook.7?fref=ts</a></p>
+        <p>Email: <a href="mailto:greg.philbrook@wsu.edu">greg.philbrook@wsu.edu</a></p>
+        <p>Personal Site: <a href="https://directory.vancouver.wsu.edu/people/greg-philbrook" target="_blank">https://directory.vancouver.wsu.edu/people/greg-philbrook</a></p>
         <p>Greg is a magical wizard that can get anything done. When it comes to your student accounts and any issues on the “back-end” Greg is your guy. Greg also provides students with recording equipment and any other devices available to help you with your creative works. You can reach Greg through Slack fairly easily, however when any problems arise, the entire department relies on him. Be nice and courteous and Greg will be there.</p>
       </div>
 
