--- a/program-info.html
+++ b/program-info.html
@@ -169,7 +169,7 @@
         <p>DTC 477 Advanced Multimedia Authoring</p>
         <p>DTC 478 Usability and Interface Design</p>
         <p>DTC 492 Engines &amp; Platforms</p>
-        <p>+ MIS or CS courses that offer background in programming and coding</p>
+        <p>+ Management Information Systems (MIS) or Computer Science (CS) courses that offer background in programming</p>
         <h3 id="toc_11">Public Relations and Digital Marketing</h3>
         <p>Creates and distributes information for placing the best context around a situation or company; creates and administers efforts to present products/ services in online contexts, particularly around considerations associated with eCommerce.</p>
         <p>DTC 336 Design and Composition</p>
@@ -177,8 +177,8 @@
         <p>DTC 338 Special Topics: Video</p>
         <p>DTC 208 Introduction to Digital Cinema and/or DTC 491 Digital Cinema</p>
         <p>DTC 330 Social Media Case Studies and/or DTC 331 Social Media Practices</p>
-        <p>+ Professional Writing Certificate (ENGL)</p>
-        <p>+ Marketing minor</p>
+        <p>+ Professional Writing Certificate (English)</p>
+        <p>+ Marketing Minor</p>
         <h3 id="toc_12">Social Media Coordinator / SEO Specialist</h3>
         <p>Oversees the policy for and development of social media for businesses and organizations; strategizes organization&#39;s web presence.</p>
         <p>DTC 336 Design and Composition</p>
@@ -186,8 +186,8 @@
         <p>DTC 331 Social Media Practices</p>
         <p>DTC 355 Multimedia Authoring</p>
         <p>DTC 356 Information Structures</p>
-        <p>+ Professional Writing Certificate (ENGL)</p>
-        <p>+ Marketing minor</p>
+        <p>+ Professional Writing Certificate (English)</p>
+        <p>+ Marketing Minor</p>
         <h3 id="toc_13">Content Specialist / Strategist</h3>
         <p>Designs and implements interfaces for online spaces; develops philosophy and methodology of communication; creates plans for development/creation of content and guidelines of voice and style; facilitates usability functions for style, voice, and content.</p>
         <p>DTC 335 Digital Animation</p>
@@ -195,7 +195,7 @@
         <p>DTC 355 Multimedia Authoring</p>
         <p>DTC 208 Introduction to Digital Cinema and/or DTC 491 Digital Cinema</p>
         <p>+ Other DTC courses in creating media objects (video, websites, sound production, digital music, etc.)</p>
-        <p>+ Professional Writing Certificate (ENGL)</p>
+        <p>+ Professional Writing Certificate (English)</p>
         <h3 id="toc_14">Media Communication Specialist</h3>
         <p>Designs and implements interfaces for online spaces; develops philosophy and methodology of communication; creates plans for development/creation of content and guidelines of voice and style; facilitates usability functions for style, voice, and content.</p>
         <p>DTC 330 Social Media Case Studies and/or DTC 331 Social Media Practices</p>
@@ -205,7 +205,7 @@
         <p>DTC 354 Digital Storytelling</p>
         <p>DTC 338 Special Topics: Social Media</p>
         <p>DTC 477 Advanced Multimedia Authoring</p>
-        <p>+ COM minor</p>
+        <p>+ Communications Minor</p>
         <p>ENGL 402 Technical &amp; Professional Writing</p>
         <h3 id="toc_15">Multimedia / Interactive Designer</h3>
         <p>Conceives, designs, and develops online or multimedia contexts for specific applications and audiences; understands the unique combinations of text, images, and interactive features in online environments.</p>
@@ -216,8 +216,8 @@
         <p>DTC 208 Introduction to Digital Cinema and/or DTC 491 Digital Cinema</p>
         <p>DTC 478 Usability &amp; Interface Design</p>
         <p>DTC 492 Engines &amp; Platforms</p>
-        <p>+ FA 434 Time Based Media</p>
-        <p>+ FA 435 Interactive Design</p>
+        <p>+ Fine Arts 434 Time Based Media</p>
+        <p>+ Fine Arts 435 Interactive Design</p>
         <h3 id="toc_16">Game Studies &amp; Design</h3>
         <p>Produces games that are fun, engaging, and meaningful across a variety of platforms including mobile, PC, or VR. Other work includes gamifying assets for companies and organizations.</p>
         <p>DTC 392 Video Game History &amp; Theory</p>
@@ -231,7 +231,7 @@
         <p>+ DTC 478 Usability &amp; Interface Design</p>
         <h2 id="toc_17" class="program-info">Student Experiences in DTC</h2>
         <img id="img3" src="img/students-in-quad_cropped.jpg" alt="Students walking in the WSUV quad">
-        <h3 id="toc_18">While in the CMDC program what is a DTC course that you have taken that you have enjoyed?</h3>
+        <h3 id="toc_18">While in the program what is a DTC course that you have taken that you have enjoyed?</h3>
         <p>“DTC 355 Advanced Digital Cinema.” - Charlotte Royal</p>
         <p>“DTC 492 Engines and Platforms.” - Andrew Hansen</p>
         <p>“DTC 354 Digital Storytelling.” - Cody Armstrong</p>
