--- a/superpowers.html
+++ b/superpowers.html
@@ -133,6 +133,11 @@
     <div class="wrapper">
 
       <div class="content">
+        <h2 class="super">What are Superpowers?</h2>
+        <p>Superpowers are how the DTC program refers to a student's area of specialty, where they have the most skills and want to focus their career. The DTC program is awesome because there are so many specialties to choose from that your degree can be tailored to prepare for work you're really passionate about!</p>
+
+        <p>This page gives an overview of what Superpowers are offered by the DTC program and gives a description of the Superpower along with a description of the jobs and tools that are used in that Superpower. Take a look through these options and see which appeals to you the most!</p>
+
         <h2 class="super" id="toc_0">Web Development</h2>
         <img id="img14" src="img/web-dev_cropped.jpg" alt="Code on a computer">
         <h3 id="toc_1">Mentor</h3>
