--- a/campus-support.html
+++ b/campus-support.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Campus & Support</title>
+  <title>CMDC Handbook| Campus & Support</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,7 +55,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -71,7 +71,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -183,7 +183,7 @@
         <div class="content">
           <h2 id="toc_0" class="campus-support">Need Assistance?</h2>
           <img id="cogs" src="img/Cogs_cropped.png">
-          <p>Learning new skills and programs as a DTC student is vital to one’s success, and the department and
+          <p>Learning new skills and programs as a CMDC student is vital to one’s success, and the department and
             university provide many resources to assist with this. From workshops to getting one on one help, there are
             many options.</p>
           <p>If you are having technical issues, <a
