--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Credits</title>
+  <title>CMDC Handbook| Credits</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,7 +55,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -74,7 +74,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
