--- a/faculty.html
+++ b/faculty.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Faculty & Staff</title>
+  <title>CMDC Handbook| Faculty & Staff</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -72,7 +72,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -222,7 +222,7 @@
           <p>Email: <a href="mailto:wluers@wsu.edu">wluers@wsu.edu</a></p>
           <p>Personal Site: <a href="http://will-luers.com/" target="_blank">http://will-luers.com/</a></p>
           <p>Will Luers was hand-selected by Dene Grigar for “Narrative Walks,” a class taught using google maps images
-            and was hired on part-time. Over time, Dr. Grigar pushed Will to come into the DTC program full-time. Prof.
+            and was hired on part-time. Over time, Dr. Grigar pushed Will to come into the CMDC program full-time. Prof.
             Luers will be your guide through specialized projects that include video production, narratives, website
             building, and digital publishing. These projects are the key to your portfolio.</p>
           <h4 id="toc_8">Areas of Expertise:</h4>
@@ -262,7 +262,7 @@
           <p>Personal Site: <a href="http://brendajeangrell.com/" target="_blank">http://brendajeangrell.com/</a></p>
           <p>Professor Brenda Grell instructs all about multimedia design as well as 2D and 3D animation. She is super
             helpful and supportive when you get stuck on a project, and is overall a pleasure to work with. If you’re in
-            the DTC program, you’re likely going to have one or two classes with Brenda, and they will be some of the
+            the CMDC program, you’re likely going to have one or two classes with Brenda, and they will be some of the
             best classes you take!</p>
           <h4 id="toc_12"><code></code>Areas of Expertise:</h4>
           <p>2D &amp; 3D Animation, Video, Multimedia Design</p>
@@ -278,7 +278,7 @@
           <p>Visiting Lecturer</p>
           <p>Email: <a href="mailto:christopher.dreger@wsu.edu">christopher.dreger@wsu.edu</a></p>
           <p>Personal Site: <a href="http://www.chrisdreger.com/" target="_blank">http://www.chrisdreger.com/</a></p>
-          <p>Professor Chris Dreger is a professional VFX and motion graphic artist turned DTC professor. He has real
+          <p>Professor Chris Dreger is a professional VFX and motion graphic artist turned CMDC professor. He has real
             experience from the industry working for <a href="https://bentimagelab.com/">Bent Image Lab</a> on numerous
             different projects, especially commercials. Specializing in all things multimedia design and video
             post-production, his classes are very fun, working mainly in Adobe Premiere Pro, After Effects, Illustrator,
@@ -314,8 +314,8 @@
           <p>Email: <a href="mailto:tfordyce@wsu.edu">tfordyce@wsu.edu</a></p>
           <p>Personal Site: <a href="http://directory.vancouver.wsu.edu/people/ted-fordyce"
               target="_blank">http://directory.vancouver.wsu.edu/people/ted-fordyce</a></p>
-          <p>Being the advisor for all DTC students, Ted helps everyone figure out their path in the DTC program. If you
-            have any questions about the specifics of being a DTC student such as certificate programs, credits, or
+          <p>Being the advisor for all CMDC students, Ted helps everyone figure out their path in the CMDC program. If you
+            have any questions about the specifics of being a CMDC student such as certificate programs, credits, or
             current standing, Ted is the person to contact and will be incredibly helpful along the way. He also teaches
             courses when he can, which I would highly recommend taking!</p>
           <h4 id="toc_21"><code></code>Areas of Expertise:</h4>
