--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Welcome to the World of DTC</title>
+  <title>CMDC Handbook| Welcome to the World of CMDC</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -72,7 +72,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -176,12 +176,12 @@
       <div id="intro-wrapper" class="wrapper">
 
         <div class="content">
-          <h2 id="toc_0" class="ind">Welcome to The World of DTC!</h2>
+          <h2 id="toc_0" class="ind">Welcome to The World of CMDC!</h2>
           <p>This is a publication written by students for students interested in obtaining a Bachelor of Arts degree in
-            Digital Technology &amp; Culture with the Creative Media and Digital Culture (CMDC) program through
+            Digital Technology &amp; Culture in the Creative Media and Digital Culture (CMDC) program through
             Washington State University Vancouver. </p>
           <p>Our goal with this handbook is to inform you, our future students, on what to expect from your experience
-            within the DTC program. We as students know how scary it can be to go into the program or any other degree
+            within the CMDC program. We as students know how scary it can be to go into the program or any other degree
             not knowing what to expect. To offer incoming students some guidance that we could have benefited from, we
             hope that this guide will provide you with some insight to get to know the program a little better before
             diving in.</p>
