--- a/program-info.html
+++ b/program-info.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Program Information</title>
+  <title>CMDC Handbook| Program Information</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -72,7 +72,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -180,17 +180,16 @@
         <div class="content">
           <h2 id="toc_0" class="program-info">Here's What You Need to Know</h2>
           <img id="img1" src="img/students-in-lab_cropped.jpg" alt="Students working together in computer lab">
-          <p>The Digital Technology and Culture program was started at WSU Vancouver. The program is one of five
-            signature programs on the Vancouver campus. It integrates research and teaching in an
+          <p>Digital Technology and Culture degree was started at WSU Vancouver and has since expanded to the Pullman and Tr-Cities campuses. In the Fall of 2022, these campuses unified the degree under a single department - the Department of Digital Technology and Culture.  The Creative Media & Digital Culture (The CMDC) program is the name of the Vancouver campus DTC, one of five signature programs on the WSU Vancouver and since the merger is called The CMDC in the Department of DTC. It integrates research and teaching in an
             intellectually-diverse, technologically innovative experience, applying inter-and transdisciplinary
             approaches that foster civic engagement from local-to-global contexts in the areas of Digital Humanities,
             media art, media communication, media studies, information systems.</p>
           <p>The program offers six specialties that include Game Studies &amp; Design; Web &amp; Mobile Design &amp;
             Development; 2 &amp; 3D Animation for Simulation &amp; Visualization; Digital Publishing; Physical
             Computing; &amp; Social Media / SEO.</p>
-          <p>Sitting at the intersection of art, technology and the humanities the DTC program provides a well-rounded
+          <p>Sitting at the intersection of art, technology and the humanities the CMDC program provides a well-rounded
             education in culture as well as technology.</p>
-          <p>In the DTC program you’ll focus on the relationship between technology and humanity, integrating critical
+          <p>In the CMDC program you’ll focus on the relationship between technology and humanity, integrating critical
             thinking, creativity and computing skills with coursework in the arts, humanities, social sciences,
             management information systems and computer science. </p>
           <p>The broad-based, interdisciplinary DTC degree prepares you for a culturally diverse, technologically
@@ -201,7 +200,7 @@
             new ones! Here are a few of the most prominent that you will use in the program, but this is by no means an
             exhaustive list. </p>
           <h3 id="toc_2">Sublime Text - <a href="https://www.sublimetext.com/">sublimetext.com</a></h3>
-          <p>Sublime Text is a text editor that you’ll use frequently throughout your time in the DTC program. It is
+          <p>Sublime Text is a text editor that you’ll use frequently throughout your time in the CMDC program. It is
             where you’ll learn to use HTML, CSS, and JavaScript. If your goal is to be a web developer, this is the tool
             you’ll use the most.</p>
           <h3 id="toc_3">Adobe Creative Suite - <a href="https://www.adobe.com/creativecloud.html">adobe.com</h3></a>
@@ -215,11 +214,11 @@
             gaming industry. </p>
           <h3 id="toc_5">Basecamp - <a href="https://basecamp.com/">basecamp.com</a></h3>
           <p>Basecamp is where you can submit and check out other students&#39; work. It&#39;s a collaborative tool that
-            is similar to Canvas that the DTC program uses exclusively. </p>
+            is similar to Canvas that the CMDC program uses exclusively. </p>
           <h3 id="toc_6">Slack - <a href="https://slack.com/">slack.com</a></h3>
           <p>Slack is where you’ll communicate to your professors and fellow students. Slack is useful for splitting
             students into smaller groups and creating a chat channel of group activities. It’s also a great way to see
-            what&#39;s happening within the DTC program. </p>
+            what&#39;s happening within the CMDC program. </p>
           <h3 id="toc_7">Blender - <a href="https://www.blender.org/">blender.org</a></h3>
           <p>Blender is a free and open-source 3D computer graphics software tool set used for creating animated films,
             visual effects, art, 3D-printed models, motion graphics, interactive 3D applications, virtual reality, and,
@@ -230,7 +229,7 @@
           <p>VMMC 111 has computers equipped with the Adobe Creative Suite, Maya, Unity, Unreal Engine, Blender, and
             other software. The classroom is an open lab for students to use outside of the class hours that are posted
             on the door outside.</p>
-          <h2 id="toc_9" class="program-info">DTC Specialty Road Maps</h2>
+          <h2 id="toc_9" class="program-info">CMDC Specialty Road Maps</h2>
           <p>The DTC degree can be tailored to many specialties; here a few paths through the program that have been
             customized for specific interests and skills.</p>
           <h3 id="toc_10">Web / App Production &amp; Development</h3>
@@ -314,7 +313,7 @@
           <p>+ DTC 478 Usability &amp; Interface Design</p>
           <h2 id="toc_17" class="program-info">Student Experiences in DTC</h2>
           <img id="img3" src="img/students-in-quad_cropped.jpg" alt="Students walking in the WSUV quad">
-          <h3 id="toc_18">While in the DTC program what is a DTC course that you have taken that you have enjoyed?</h3>
+          <h3 id="toc_18">While in the CMDC program what is a DTC course that you have taken that you have enjoyed?</h3>
           <p>“DTC 355 Advanced Digital Cinema.” - Charlotte Royal</p>
           <p>“DTC 492 Engines and Platforms.” - Andrew Hansen</p>
           <p>“DTC 354 Digital Storytelling.” - Cody Armstrong</p>
