--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Senior Seminar</title>
+  <title>CMDC Handbook| Senior Seminar</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -72,7 +72,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -286,9 +286,7 @@
             Dene, to see what group is best for you and who your mentor should be for the seminar. </p>
           <h2 id="toc_14" class="senior-seminar">Past Projects</h2>
           <p>(<a href="https://dtc-wsuv.org/projects/">https://dtc-wsuv.org/projects/</a>)</p>
-          <p>The Creative Media and Digital Culture (CMDC) program were created in 1997 and then the name was changed to
-            Digital Technology and Culture (DTC) in 2003. Since then there have been several projects seniors have
-            worked on. Examples include:</p>
+          <p>Since 2003, CMDC seniors in the Senior Seminar have built some impressive projects for clients. Examples include:</p>
           <ul class="seminar_lists">
             <li>Amnesia Restored (restoration of the 1986 game)</li>
             <li>Clark County Historical Museum (Informational website)</li>
