--- a/superpowers.html
+++ b/superpowers.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DTC Handbook| Superpowers</title>
+  <title>CMDC Handbook| Superpowers</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
     <div id="mainSidenav" class="sidenav">
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
-      <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <h1 id="title3">The CMDC Handbook</span><span class="small">Your Guide to The Program</span></h1>
       <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
@@ -72,7 +72,7 @@
                 <li>Tools</li>
               </a>
               <a href="program-info.html#toc_9">
-                <li>DTC Speciality Road Maps</li>
+                <li>CMDC Speciality Road Maps</li>
               </a>
               <a href="program-info.html#toc_17">
                 <li>Student Experiences</li>
@@ -177,11 +177,11 @@
 
         <div class="content">
           <h2 class="super">What are Superpowers?</h2>
-          <p>Superpowers are how the DTC program refers to a student's area of specialty, where they have the most
-            skills and want to focus their career. The DTC program is awesome because there are so many specialties to
+          <p>Superpowers are how the CDMC program refers to a student's area of specialty, where they have the most
+            skills and want to focus their career. The CMDC program is awesome because there are so many specialties to
             choose from that your degree can be tailored to prepare for work you're really passionate about!</p>
 
-          <p>This page gives an overview of what Superpowers are offered by the DTC program and gives a description of
+          <p>This page gives an overview of what Superpowers are offered by the CDMC program and gives a description of
             the Superpower along with a description of the jobs and tools that are used in that Superpower. Take a look
             through these options and see which appeals to you the most!</p>
 
